Signed-off-by: vnkiddev <vnkiddev@gmail.com>

--- a/QRDjango/CFQR/product/templates/qr_template.html
+++ b/QRDjango/CFQR/product/templates/qr_template.html
@@ -37,9 +37,6 @@ function showDivs(n) {
     <div class="container">
       <img class="logo" src="{% static 'logo-yeallow.png' %}">
       <div id="branding">
-        
-
-        <h1>Connect Fashion</h1>
       </div>
       <nav>
         <ul>
@@ -85,16 +82,11 @@ function showDivs(n) {
     <div id="footer">
       <div class="footer-container">
         <div class="footer">
-          <h4>Explore the Docs</h4>
-          <p>Mauris metus eros, Nullam enim sapien, maximus sed mi nec.</p>
-        </div>
-        <div class="footer">
-          <h4>Explore the Docs</h4>
-          <p>Mauris metus eros, Nullam enim sapien, maximus sed mi nec.</p>
-        </div>
-        <div class="footer">
-          <h4>Explore the Docs</h4>
-          <p>Mauris metus eros, Nullam enim sapien, maximus sed mi nec.</p>
+          <h4>CÔNG TY CỔ PHẦN DỊCH VỤ THỜI TRANG KẾT NỐI</h4>
+          <p>Địa chỉ: Tầng 4, toàn M5, 91 Nguyễn Chí Thanh, Đống Đa, Hà Nội</p>
+          <p>Email: contact@connect.fashion.com.vn</p>
+          <p>Số ĐKKD: 0110414331, ngày cấp: 12/07/2023</p>
+          <p>Nơi cấp: Sở Kế hoạch và đầu tư Hà Nội</p>
         </div>
         <div class="footer">
           <h4>Explore the Docs</h4>
